force-app/main/default/objects/Generic_Records__c/Generic_Records__c.object-meta.xml
<CustomObject>
    <label>Generic Record</label>
    <nameField>
        <displayFormat>GR-{0000000}</displayFormat>
        <label>Generic Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>