force-app/main/default/objects/Generic_Records__c/fields/Sequence_Number_TAD__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number_TAD__c</fullName>
    <label>Sequence Number TAD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>