force-app/main/default/objects/Generic_Records__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRL</fullName>
            </value>
            <value>
                <fullName>TAD</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>