force-app/main/default/objects/Generic_Records__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Assigned__c</columns>
    <columns>Coupon_Name__c</columns>
    <columns>Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>